fix layout issues in large screen

--- a/src/layouts/LayoutMain/LayoutMain.module.scss
+++ b/src/layouts/LayoutMain/LayoutMain.module.scss
@@ -7,6 +7,8 @@
   display: grid;
   grid-template-columns: 240px 1fr;
   overflow: hidden;
+  margin: 0 auto;
+  max-width: 1440px;
   height: 100vh;
   color: $text-color;
   -webkit-tap-highlight-color: transparent;
