--- a/src/views/Home/components/FavoriteArtistItems/FavoriteArtistItems.module.scss
+++ b/src/views/Home/components/FavoriteArtistItems/FavoriteArtistItems.module.scss
@@ -2,4 +2,5 @@
   display: flex;
   justify-content: space-between;
   margin-top: 16px;
+  max-width: 1082px;
 }
