--- a/src/views/Home/components/Playlist/Playlist.module.scss
+++ b/src/views/Home/components/Playlist/Playlist.module.scss
@@ -1,5 +1,6 @@
 .playlist-container {
   margin-top: 30px;
+  max-width: 1082px;
   height: 310px;
 
   .playlist-title {
