--- a/src/views/Home/mains/Partner/Partner.module.scss
+++ b/src/views/Home/mains/Partner/Partner.module.scss
@@ -1,6 +1,7 @@
 @import "src/assets/styles/_varibles.scss";
 
 .partner-container {
+  max-width: 1082px;
   padding: 40px 40px 0;
   background-color: $partner-background-color;
 
